# UB-ES-2025-C2

./: .editorconfig  .gitignore  README.md
.github/workflows/: create-branch-on-issue.yml  main_musicspace.yml
backend/: .gitignore  diagrama_ER.md  manage.py  pyproject.toml  requirements.txt  ruff.toml
backend/musicSpace/: asgi.py  settings.py  urls.py  wsgi.py
backend/musicSpace/api/: apps.py  models.py  serializers.py  urls.py  views.py
backend/musicSpace/api/migrations/: 0003_alter_song_artist_alter_song_author_and_more.py  0004_alter_song_artist_alter_song_author_and_more.py
backend/music_space/: asgi.py  settings.py  urls.py  wsgi.py
backend/music_space/api/: apps.py  manager.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/music_space/api/migrations/: 0001_initial.py  0002_initial.py  0002_song_cover.py  0003_playlist_cover.py  0004_alter_userprofile_profilepic.py  0005_alter_song_managers.py  0005_song_file_audio.py  0006_alter_playlist_managers.py  0006_remove_playlist_contains_song_playlists_and_more.py  0007_alter_song_playlists.py  0008_remove_userprofile_email_and_more.py  0009_alter_userprofile_description.py
backend/music_space/tests/: __init__.py  test_api.py  test_docs.py  test_health.py
frontend/: .gitignore  .oxlintrc.json  .prettierrc.json  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/assets/: main.css
frontend/src/assets/css/: main.css
frontend/src/components/: Header.vue  Sidebar.vue
frontend/src/components/__tests__/: Header.spec.js
frontend/src/router/: index.js
frontend/src/services/: api.js  auth.js
frontend/src/store/: authStore.js  guestApi.js  index.js
frontend/src/views/: Catalog.vue  Home.vue  LogIn.vue  Playlists.vue  Search.vue  SignUp.vue  SongDetailById.vue  User.vue
