[project]
name = "back"
version = "0.1.0"
description = "Music space"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "django-health-check>=3.20.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-nested-routers>=0.95.0",
    "drf-spectacular>=0.28.0",
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "allure-pytest>=2.15.0",
    "pylint>=4.0.0",
    "pytest>=8.4.2",
]
